--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>4.3.17.RELEASE</version>
+            <version>[4.3.17,)</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
